fix(bug): 🐛 dark mode

--- a/resources/skins.citizen.styles/Pagetools.less
+++ b/resources/skins.citizen.styles/Pagetools.less
@@ -250,24 +250,27 @@
 	}
 }
 
-.skin-citizen-dark {
-	#ca-ve-edit > a:before {
-		filter: invert( 1 );
-	}
-}
-
 // Additional buttons
 #Wikiplus-Edit-TopBtn,
 #ca-redirect {
-	> a {
-		&:before {
-			width: var( --size-icon );
-			height: var( --size-icon );
-			background-position: center;
-			background-repeat: no-repeat;
-			background-size: var( --size-icon );
-			content: '';
-			transition: @transition-opacity;
+	> a:before {
+		width: var( --size-icon );
+		height: var( --size-icon );
+		background-position: center;
+		background-repeat: no-repeat;
+		background-size: var( --size-icon );
+		content: '';
+		transition: @transition-opacity;
+	}
+}
+
+// Dark mode
+.skin-citizen-dark {
+	#ca-ve-edit,
+	#Wikiplus-Edit-TopBtn,
+	#ca-redirect {
+		> a:before {
+			filter: invert( 1 );
 		}
 	}
 }
